<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serial</name>
  <version>1.2.1</version>
  <description>
    Serial is a cross-platform, simple to use library for using serial ports on computers.
    This library provides a C++, object oriented interface for interacting with RS-232
    like devices on Linux and Windows.
  </description>

  <maintainer email="229143434@qq.com">jinmenglei</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://github.com/jinmenglei/serial/</url>
  <url type="repository">https://github.com/jinmenglei/serial</url>
  <url type="bugtracker">https://github.com/jinmenglei/serial/issues</url>

  <author email="wjwwood@gmail.com">William Woodall</author>
  <author email="ash.gti@gmail.com">John Harrison</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>boost</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
